--- a/BF.html
+++ b/BF.html
@@ -46,6 +46,8 @@ body {
 }
 
 h1 {
+    <img src="1763724381951.jpg" style="width:100%; border-radius:16px; margin-bottom:12px;">
+
     color: #ff4d6d;
     margin-bottom: 15px;
 }
